--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -1,10 +1,15 @@
 name: Feature branch deployment Workflow
 
 on:
-  pull_request:
+  push:
     branches:
-      - feat/*
-      # - chore/*
+      - "feat/*"
+      - "chore/*"
+# on:
+#   pull_request:
+#     branches:
+#       - feat/*
+#       # - chore/*
 
 jobs:
   deploy:
