--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -46,6 +46,7 @@ jobs:
 
       - name: SSH Into Dev Environment
         run: |
+          echo $~/.ssh/id_rsa
           ssh -J abhishek@34.138.106.113 -i ~/.ssh/id_rsa abhishek@10.0.1.6 -p 8463
 
       - name: Deploy to Project Directory
