--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -34,14 +34,14 @@ jobs:
           ticket_id=${{ steps.extract-ticket-id.outputs.ticket_id }}
           echo "Ticket ID: $ticket_id"
 
-      - name: Set Up SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      # - name: Set Up SSH
+      #   run: |
+      #     mkdir -p ~/.ssh
+      #     echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+      #     chmod 600 ~/.ssh/id_rsa
+      #     ssh-keyscan github.com >> ~/.ssh/known_hosts
+      #   env:
+      #     SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
       # - name: SSH Into Dev Environment
       #   run: |
@@ -49,24 +49,26 @@ jobs:
       - name: ssh proxy command
         uses: appleboy/ssh-action@v1.0.0
         with:
-          host: 10.0.1.6
+          # host: 10.0.1.6
+          host: 34.138.106.113
           username: abhishek
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 8463
-          proxy_host: 34.138.106.113
-          proxy_username: abhishek
-          proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
-          proxy_port: 22
+          port: 22
+          # port: 8463
+          # proxy_host: 34.138.106.113
+          # proxy_username: abhishek
+          # proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          # proxy_port: 22
 
-      - name: Deploy to Project Directory
-        run: |
-          sudo su - test3
-          cd UI
-          ticket_id=${{ steps.extract-ticket-id.outputs.ticket_id }}
-          echo "Ticket ID: $ticket_id"
-          mkdir $ticket_id
-          cd $ticket_id
-          ls
+      # - name: Deploy to Project Directory
+      #   run: |
+      #     sudo su - test3
+      #     cd UI
+      #     ticket_id=${{ steps.extract-ticket-id.outputs.ticket_id }}
+      #     echo "Ticket ID: $ticket_id"
+      #     mkdir $ticket_id
+      #     cd $ticket_id
+      #     ls
 
       - name: Check for Available Ports
         run: |
