--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -49,17 +49,17 @@ jobs:
       - name: ssh proxy command
         uses: appleboy/ssh-action@v1.0.0
         with:
-          # host: 10.0.1.6
-          host: 34.138.106.113
+          host: 10.0.1.6
+          # host: 34.138.106.113
           username: abhishek
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
+          # port: 22
+          port: 8463
+          proxy_host: 34.138.106.113
+          proxy_username: abhishek
+          proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          proxy_port: 22
           script: whoami
-          # port: 8463
-          # proxy_host: 34.138.106.113
-          # proxy_username: abhishek
-          # proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
-          # proxy_port: 22
 
       # - name: Deploy to Project Directory
       #   run: |
