--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -41,35 +41,25 @@ jobs:
           proxy_username: abhishek
           proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
           proxy_port: 22
-          script: ls
+          script: |
+            sudo su - test3
+            cd UI
+            ticket_id=${{ steps.extract-ticket-id.outputs.ticket_id }}
+            echo "Ticket ID: $ticket_id"
+            mkdir $ticket_id
+            cd $ticket_id
+            ls
+            start_port=3000
+            end_port=9000
 
-      # - name: Deploy to Project Directory
-      #   run: |
-      #     sudo su - test3
-      #     cd UI
-      #     ticket_id=${{ steps.extract-ticket-id.outputs.ticket_id }}
-      #     echo "Ticket ID: $ticket_id"
-      #     mkdir $ticket_id
-      #     cd $ticket_id
-      #     ls
-      - name: Deploy to Project Directory
-        run: id
-
-      - name: Check for Available Ports
-        run: |
-          start_port=3000
-          end_port=9000
-
-          for ((port=start_port; port<=end_port; port++))
-          do
-            if ! lsof -i :$port &> /dev/null; then
-              # Port is not in use, you can use it for your server
-              echo "Port $port is available."
-              export AVAILABLE_PORT=$port
-              # You can assign $port to a variable for later use
-              break  # Exit the loop after finding an available port
-            fi
-          done
+            for ((port=start_port; port<=end_port; port++))
+            do
+              if ! lsof -i :$port &> /dev/null; then
+                echo "Port $port is available."
+                export AVAILABLE_PORT=$port
+                break  # Exit the loop after finding an available port
+              fi
+            done
 
       # - name: Start Server
       #   run: |
