--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -43,7 +43,7 @@ jobs:
           proxy_port: 22
           script: |
             sudo su - test3
-            cd UI
+            cd /home2/test3/UI
             ticket_id=${{ steps.extract-ticket-id.outputs.ticket_id }}
             echo "Ticket ID: $ticket_id"
             mkdir $ticket_id
