--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -42,15 +42,14 @@ jobs:
           proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
           proxy_port: 22
           script: |
-            sudo su - test3
-            id
-            pwd
-            cd /home2/test3/UI
+            sudo -u test3 id
+            sudo -u test3 pwd
             ticket_id=${{ steps.extract-ticket-id.outputs.ticket_id }}
             echo "Ticket ID: $ticket_id"
-            mkdir $ticket_id
-            cd $ticket_id
-            ls
+            sudo -u test3 mkdir UI/$ticket_id
+            sudo -u test3 cd UI/$ticket_id
+            sudo -u test3 ls UI/
+
             start_port=3000
             end_port=9000
 
