chore: rerun cd

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -25,7 +25,7 @@ jobs:
           branch_name=$(echo $GITHUB_REF | sed 's|refs/heads/||')
           if [[ "$branch_name" =~ ^(feat/|chore/)(.*)$ ]]; then
             ticket_id="${BASH_REMATCH[2]}"
-            echo "::set-output name=ticket_id::$ticket_id"
+            export TICKET_ID=$ticket_id
           else
             echo "No matching pattern found in the branch name."
           fi
@@ -44,10 +44,9 @@ jobs:
           script: |
             sudo su - test3 -c id
             sudo su - test3 -c pwd
-            ticket_id=${{ steps.extract-ticket-id.outputs.ticket_id }}
-            echo "Ticket ID: $ticket_id"
-            sudo su - test3 -c mkdir UI/$ticket_id
-            sudo su - test3 -c cd UI/$ticket_id
+            echo "Ticket ID: $TICKET_ID"
+            sudo su - test3 -c mkdir UI/$TICKET_ID
+            sudo su - test3 -c cd UI/$TICKET_ID
             sudo su - test3 -c ls UI/
 
             start_port=3000
