--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -53,7 +53,7 @@ jobs:
             sudo su - test3 -c "mkdir UI/$ticket_id"
             sudo su - test3 -c "cd UI/$ticket_id"
             sudo su - test3 -c "ls UI/"
-            sudo su - test3 -c "cd UI/$ticket_id && git@github.com:abhishek-charlee/test.git"
+            sudo su - test3 -c "cd UI/$ticket_id && git clone git@github.com:abhishek-charlee/test.git"
 
             start_port=3000
             end_port=9000
