--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -3,8 +3,8 @@ name: Feature branch deployment Workflow
 on:
   push:
     branches:
-      - "feat/*"
-      - "chore/*"
+      - "dev-*"
+      - "qa-*"
 # on:
 #   pull_request:
 #     branches:
@@ -24,7 +24,9 @@ jobs:
         run: |
           branch_name=$(echo $GITHUB_REF | sed 's|refs/heads/||')
           if [[ "$branch_name" =~ ^(feat/|chore/)(.*)$ ]]; then
-            ticket_id="${BASH_REMATCH[2]}"
+            project_name=$(echo $branch_name | cut -d'/' -f 2)
+            ticket_id=$(echo $branch_name | cut -d'/' -f 3)
+            echo "::set-output name=project_name::$project_name"
             echo "::set-output name=ticket_id::$ticket_id"
           else
             echo "No matching pattern found in the branch name."
@@ -32,7 +34,9 @@ jobs:
       - name: Show Ticket ID
         run: |
           ticket_id=${{ steps.extract-ticket-id.outputs.ticket_id }}
+          ticket_id=${{ steps.extract-ticket-id.outputs.project_name }}
           echo "Ticket ID: $ticket_id"
+          echo "branch name: $project_name"
 
       - name: ssh proxy command
         uses: appleboy/ssh-action@master
