chore: rerun cd

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -3,8 +3,9 @@ name: Feature branch deployment Workflow
 on:
   push:
     branches:
-      - "dev-*"
-      - "qa-*"
+      - "feat/*"
+      - "Feat/*"
+      - "chore/*"
 # on:
 #   pull_request:
 #     branches:
