--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -22,8 +22,8 @@ jobs:
           if [[ "$branch_name" =~ ^(feat/|chore/)(.*)$ ]]; then
             project_name=$(echo $branch_name | cut -d'/' -f 2)
             ticket_id=$(echo $branch_name | cut -d'/' -f 3)
-            echo "::set-output name=project_name::$project_name"
-            echo "::set-output name=ticket_id::$ticket_id"
+            echo "project_name=$project_name" >> $GITHUB_OUTPUT
+            echo "ticket_id=$ticket_id" >> $GITHUB_OUTPUT
           else
             echo "No matching pattern found in the branch name."
           fi
