chore: rerun cd

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           host: 10.0.1.6
           username: $PROJECT_NAME
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          key: ${{ secrets.${PROJECT_NAME}_private_key }}
           port: 8463
           proxy_host: 34.138.106.113
           proxy_username: abhishek
