chore: rerun cd

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Set SSH Key Secret
         run: |
           project_secret_key="${PROJECT_NAME}_PRIVATE_KEY"
-          echo "$SECRET_KEY=${{ secrets[$project_secret_key] }}" >> $GITHUB_ENV
+          echo "$SECRET_KEY=${{ secrets.$project_secret_key }}" >> $GITHUB_ENV
 
       - name: ssh proxy command
         uses: appleboy/ssh-action@master
