--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           project_name=${{ steps.set-project.outputs.project_name }}
           secret_key="${project_name}_PRIVATE_KEY"
-          secret_value="${{ secrets[secret_key] }}"
+          secret_value="${{ secrets[$secret_key] }}"
           echo "Secret Value: $secret_value"
           echo $PROJECT_SECRET_KEY=$secret_value >> $GITHUB_ENV
 
