--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Set SSH Key Secret
         run: |
           project_name=${{ steps.set-project.outputs.project_name }}
+          echo $project_name 
           secret_key="${project_name}_PRIVATE_KEY"
           echo $secret_key 
           secret_value="${{ secrets[$secret_key] }}"
