--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -34,10 +34,12 @@ jobs:
           project_name=${{ steps.set-project.outputs.project_name }}
           echo $project_name 
           secret_key="${project_name}_PRIVATE_KEY"
-          echo $secret_key 
-          # secret_value="${{ secrets[$secret_key] }}"
-          # echo "Secret Value: $secret_value"
-          # echo $PROJECT_SECRET_KEY=$secret_value >> $GITHUB_ENV
+
+      # - name:
+      #     echo $secret_key
+      # secret_value="${{ secrets[$secret_key] }}"
+      # echo "Secret Value: $secret_value"
+      # echo $PROJECT_SECRET_KEY=$secret_value >> $GITHUB_ENV
 
       - name: ssh proxy command
         uses: appleboy/ssh-action@master
