chore: rerun cd

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -31,10 +31,9 @@ jobs:
 
       - name: Set SSH Key Secret
         run: |
-          echo $PROJECT_NAME 
-          secret_key="${PROJECT_NAME}_PRIVATE_KEY"
+          echo $PROJECT_NAME
           echo $secret_key
-          secret_value="${{ secrets.$secret_key }}"
+          secret_value="${{ secrets["${PROJECT_NAME}_PRIVATE_KEY"] }}"
           echo $secret_value
 
       # - name:
