chore: rerun cd

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -31,11 +31,11 @@ jobs:
 
       - name: Set SSH Key Secret
         run: |
-          echo $PROJECT_NAME
+          echo "$PROJECT_NAME"
           secret_key="${PROJECT_NAME}_PRIVATE_KEY"
-          echo $secret_key
-          secret_value="${{ secrets[{{ $secret_key }}] }}"
-          echo $secret_value
+          echo "$secret_key"
+          secret_value="${{ secrets[$secret_key] }}"
+          echo "$secret_value"
 
       # - name:
       #     echo $secret_key
