--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -47,11 +47,11 @@ jobs:
         with:
           host: 10.0.1.6
           username: $PROJECT_NAME
-          key: ${{ env.PROJECT_SECRET_KEY }}
+          key: $PROJECT_PRIVATE_KEY
           port: 8463
           proxy_host: 34.138.106.113
           proxy_username: abhishek
-          proxy_key: $PROJECT_PRIVATE_KEY
+          proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
           proxy_port: 22
           script: |
             whoami
