chore: rerun cd

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -9,7 +9,7 @@ on:
       - "Chore/*/*"
 
 env:
-  environment: ${{ github.ref_name.split('/')[1] }}
+  environment: github.ref_name.split
 
 jobs:
   deploy:
