chore: rerun cd

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: ${{ env.environment }}
+    environment: ${{ environment }}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
