--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -38,7 +38,8 @@ jobs:
           proxy_username: ${{ secrets.PROXY_USERNAME }}
           proxy_key: ${{ secrets.PROXY_PRIVATE_KEY }}
           proxy_port: ${{ secrets.PROXY_HOST_PORT }}
-          script:
+          script: |
+            cd UI
             ls
             # sudo su - test3 -c "mkdir UI/$TICKET_ID"
             # sudo su - test3 -c "cd UI/$TICKET_ID"
