--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -40,11 +40,10 @@ jobs:
           proxy_port: ${{ secrets.PROXY_HOST_PORT }}
           script: |
             cd UI
-            ls
-            # sudo su - test3 -c "mkdir UI/$TICKET_ID"
-            # sudo su - test3 -c "cd UI/$TICKET_ID"
-            # sudo su - test3 -c "ls UI/"
-            # sudo su - test3 -c "cd UI/$TICKET_ID && git clone git@github.com:abhishek-charlee/test.git"
+            mkdir "$TICKET_ID"
+            cd "$TICKET_ID"
+            git clone "git@github.com:abhishek-charlee/test.git"
+            ls 
 
             # start_port=3000
             # end_port=9000
