--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -40,8 +40,8 @@ jobs:
           proxy_port: ${{ secrets.PROXY_HOST_PORT }}
           script: |
             cd UI
-            mkdir $TICKET_ID
-            cd $TICKET_ID
+            "mkdir $TICKET_ID"
+            "cd $TICKET_ID"
             git clone "git@github.com:abhishek-charlee/test.git"
             ls 
 
