--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -39,9 +39,12 @@ jobs:
           proxy_key: ${{ secrets.PROXY_PRIVATE_KEY }}
           proxy_port: ${{ secrets.PROXY_HOST_PORT }}
           script: |
-            echo $TICKET_ID
+            echo "$TICKET_ID"
             cd UI
             mkdir testt
+            mkdir "$TICKET_ID"
+            echo "hii"
+            echo "hii $TICKET_ID"
             # cd $TICKET_ID
             # git clone git@github.com:abhishek-charlee/test.git
             # ls
