--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -41,11 +41,22 @@ jobs:
           script: |
             echo "$TICKET_ID"
             cd UI
-            mkdir testt
-            mkdir ${{ env.TICKET_ID }}
-            cd ${{ env.TICKET_ID }}
-            git clone git@github.com:abhishek-charlee/test.git
-            ls
+            if [ -d ${{ env.TICKET_ID }} ]; then
+                echo "Directory exists."
+                cd ${{ env.TICKET_ID }}/test
+                git stash
+                git pull
+                ls
+            else
+                echo "Directory does not exist."
+                mkdir testt
+                mkdir ${{ env.TICKET_ID }}
+                cd ${{ env.TICKET_ID }}
+                git clone git@github.com:abhishek-charlee/test.git
+                ls
+            fi
+
+
 
             start_port=3000
             end_port=9000
