--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -57,18 +57,17 @@ jobs:
             fi
 
 
+            # start_port=3000
+            # end_port=9000
 
-            start_port=3000
-            end_port=9000
-
-            for ((port=start_port; port<=end_port; port++))
-            do
-              if ! lsof -i :$port &> /dev/null; then
-                echo "Port $port is available."
-                export AVAILABLE_PORT=$port
-                break  # Exit the loop after finding an available port
-              fi
-            done
+            # for ((port=start_port; port<=end_port; port++))
+            # do
+            #   if ! lsof -i :$port &> /dev/null; then
+            #     echo "Port $port is available."
+            #     export AVAILABLE_PORT=$port
+            #     break  # Exit the loop after finding an available port
+            #   fi
+            # done
       # - name: Start Server
       #   run: |
       #     cd your_project_directory
